# PDESolvers

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.py
.github/workflows/: ci.yml
GPUSolver/: CMakeLists.txt  main.cu
GPUSolver/blackscholes/: gbm.cpp  gbm.h  gbm_parallel.cu
GPUSolver/cpu/: bse_solvers.cpp  bse_solvers.h  gbm.cpp
GPUSolver/gpu/: 1d_heatEq_cn.cu  bse_explicit_parallel.cu  bse_solvers_parallel.cuh  cg_solver.cu  gbm_parallel.cu
HeatEquationSolver/: README.md  crank_nicolson.py  explicit_method.py  ftcs_scheme.py  heat_equation.py  heat_equation_cn.py
ci/: run_python_tests.sh  script.sh
heat-eq-simulation/: 1D_CN.py  1D_ftcs.py
pdesolvers/: __init__.py  main.py
pdesolvers/black-scholes/: black_scholes_explicit.py
pdesolvers/enums/: __init__.py  enums.py  option_type.py
pdesolvers/heat_equation_1d/: heat_equation.py  main.py
pdesolvers/heat_equation_1d/context/: solver_context.py
pdesolvers/heat_equation_1d/solution/: solution_1d.py
pdesolvers/heat_equation_1d/solver/: cn_solver.py  explicit_solver.py  solver_strategy.py
pdesolvers/heat_equation_1d/strategy/: solver_strategy.py
pdesolvers/optionspricing/: __init__.py  black_scholes_formula.py  market_data.py  monte_carlo.py
pdesolvers/pdes/: __init__.py  black_scholes.py  heat_1d.py
pdesolvers/solution/: solution.py
pdesolvers/solvers/: __init__.py  black_scholes_solvers.py  heat_solvers.py
pdesolvers/tests/: test_black_scholes.py  test_heat_solvers.py  test_options_pricing.py
pdesolvers/utils/: utility.py
playground/: 2D_CN.py  2D_CrankNicolson.py  2D_explicit.py  2D_heatEq_cn.py  2d_heatEq_solver.py  README.md  black_scholes_cn.py  black_scholes_explicit.py  geometric_brownian_motion.py  heat_equation.py  heat_equation_cn.py
scripts/: download_csv.sh
utils/: plot_csv.py
